Fixed missed pages that didn't get inlined PDFs.
This should be all of them that needs to display inline PDFs.

Note, the size restrictions on some of the pages makes the inlined PDFs
look too small or behave weirdly.

--- a/acj/static/less/course.less
+++ b/acj/static/less/course.less
@@ -50,7 +50,7 @@
     }
     
     /* ul for metadata */
-    .list-inline {
+    .question-metadata-list {
       
       margin-bottom: .5em;
       padding-top: .5em;
@@ -74,7 +74,7 @@
         font-size: 100%;
       }
     
-    }//closes list-inline
+    }//closes question-metadata-list
     
   }//closes each-question
   
